Update: Apex charts and ios styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,9 @@
   <!-- <app-file-uploader></app-file-uploader> -->
   <!-- <app-countdown></app-countdown> -->
   <!-- <app-vimeo-player></app-vimeo-player> -->
-  <app-cookies></app-cookies>
+  <!-- <app-cookies></app-cookies> -->
+  <!-- <app-ios-styles></app-ios-styles> -->
+  <app-apex-charts></app-apex-charts>
 
   <!-- Links -->
   <div class="card-container">
